trunk/Archive2/3d/f07afae972b1b3/output
In file included from /usr/local/include/c++/4.9.2/bits/stl_map.h:63:0,
                 from /usr/local/include/c++/4.9.2/map:61,
                 from main.cpp:3:
/usr/local/include/c++/4.9.2/tuple: In instantiation of 'std::pair<_T1, _T2>::pair(std::tuple<_Args1 ...>&, std::tuple<_Args2 ...>&, std::_Index_tuple<_Indexes1 ...>, std::_Index_tuple<_Indexes2 ...>) [with _Args1 = {const char (&)[3]}; long unsigned int ..._Indexes1 = {0ul}; _Args2 = {}; long unsigned int ..._Indexes2 = {}; _T1 = const char [3]; _T2 = int]':
/usr/local/include/c++/4.9.2/tuple:1091:63:   required from 'std::pair<_T1, _T2>::pair(std::piecewise_construct_t, std::tuple<_Args1 ...>, std::tuple<_Args2 ...>) [with _Args1 = {const char (&)[3]}; _Args2 = {}; _T1 = const char [3]; _T2 = int]'
/usr/local/include/c++/4.9.2/ext/new_allocator.h:120:4:   required from 'void __gnu_cxx::new_allocator<_Tp>::construct(_Up*, _Args&& ...) [with _Up = std::pair<const char [3], int>; _Args = {const std::piecewise_construct_t&, std::tuple<const char (&)[3]>, std::tuple<>}; _Tp = std::_Rb_tree_node<std::pair<const char [3], int> >]'
/usr/local/include/c++/4.9.2/bits/alloc_traits.h:253:4:   required from 'static std::_Require<typename std::allocator_traits<_Alloc>::__construct_helper<_Tp, _Args>::type> std::allocator_traits<_Alloc>::_S_construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = std::pair<const char [3], int>; _Args = {const std::piecewise_construct_t&, std::tuple<const char (&)[3]>, std::tuple<>}; _Alloc = std::allocator<std::_Rb_tree_node<std::pair<const char [3], int> > >; std::_Require<typename std::allocator_traits<_Alloc>::__construct_helper<_Tp, _Args>::type> = void]'
/usr/local/include/c++/4.9.2/bits/alloc_traits.h:399:57:   required from 'static decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) std::allocator_traits<_Alloc>::construct(_Alloc&, _Tp*, _Args&& ...) [with _Tp = std::pair<const char [3], int>; _Args = {const std::piecewise_construct_t&, std::tuple<const char (&)[3]>, std::tuple<>}; _Alloc = std::allocator<std::_Rb_tree_node<std::pair<const char [3], int> > >; decltype (_S_construct(__a, __p, (forward<_Args>)(std::allocator_traits::construct::__args)...)) = <type error>]'
/usr/local/include/c++/4.9.2/bits/stl_tree.h:423:42:   required from 'std::_Rb_tree_node<_Val>* std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_create_node(_Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<const char (&)[3]>, std::tuple<>}; _Key = char [3]; _Val = std::pair<const char [3], int>; _KeyOfValue = std::_Select1st<std::pair<const char [3], int> >; _Compare = std::less<char [3]>; _Alloc = std::allocator<std::pair<const char [3], int> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_Link_type = std::_Rb_tree_node<std::pair<const char [3], int> >*]'
/usr/local/include/c++/4.9.2/bits/stl_tree.h:1790:64:   required from 'std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::_M_emplace_hint_unique(std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::const_iterator, _Args&& ...) [with _Args = {const std::piecewise_construct_t&, std::tuple<const char (&)[3]>, std::tuple<>}; _Key = char [3]; _Val = std::pair<const char [3], int>; _KeyOfValue = std::_Select1st<std::pair<const char [3], int> >; _Compare = std::less<char [3]>; _Alloc = std::allocator<std::pair<const char [3], int> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::iterator = std::_Rb_tree_iterator<std::pair<const char [3], int> >; std::_Rb_tree<_Key, _Val, _KeyOfValue, _Compare, _Alloc>::const_iterator = std::_Rb_tree_const_iterator<std::pair<const char [3], int> >]'
/usr/local/include/c++/4.9.2/bits/stl_map.h:500:8:   required from 'std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type& std::map<_Key, _Tp, _Compare, _Alloc>::operator[](const key_type&) [with _Key = char [3]; _Tp = int; _Compare = std::less<char [3]>; _Alloc = std::allocator<std::pair<const char [3], int> >; std::map<_Key, _Tp, _Compare, _Alloc>::mapped_type = int; std::map<_Key, _Tp, _Compare, _Alloc>::key_type = char [3]]'
main.cpp:9:14:   required from here
/usr/local/include/c++/4.9.2/tuple:1102:70: error: array used as initializer
         second(std::forward<_Args2>(std::get<_Indexes2>(__tuple2))...)
                                                                      ^
